--- a/MVC/WebApplication/Views/Tarefa/Delete.cshtml
+++ b/MVC/WebApplication/Views/Tarefa/Delete.cshtml
@@ -5,33 +5,36 @@
 }
 
 <h3>Tem certeza que deseja excluir a tarefa?</h3>
-<div>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.nmTarefa)
-        </dt>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.nmTarefa)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.nmTarefa)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.nmTarefa)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.icConcluido)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.icConcluido)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.icConcluido)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.icConcluido)
+            </dd>
+        </dl>
 
-    </dl>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Confirmar" class="btn btn-success" />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Confirmar" class="btn btn-success" />
+            </div>
         </div>
     </div>
-</div>
-<div>
-    @Html.ActionLink("Voltar", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Voltar", "Index")
+    </div>
+}
